Bug 89750 - Edit with external tool does not start external tool on Windows
Summary: Edit with external tool does not start external tool on Windows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:5.0.0 target:4.4.4
Keywords: regression
: 90041 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-03-01 09:45 UTC by zaqzaqtgbyhnujm
Modified: 2015-04-16 21:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zaqzaqtgbyhnujm 2015-03-01 09:45:40 UTC
Selecting a inserted SVG picture and right clicking and select "Edit with external tool…" to launch the external application to edit the picture doesn't work in LibreOffice 4.4.1.2.
The shortcut works fine in LibreOffice 4.4.0.3 but it ceased to work in LibreOffice 4.4.1.2.
The external program I use to edit SVG pictures with is Inkscape 0.91.
I have tried to remove LibreOffice 4.4.1.2 and reinstall LibreOffice 4.4.0.3 on both at Windows 7 Professional and on a Windows 8.1 Professional equipped computer. After reinstalling the LibreOffice 4.4.0.3 the "Edit with external tool…" worked fine again.
If I double click on a SVG file in Windows explorer, Windows launches Inkscape and opens the SVG file.
Both windows versions are with Danish user interface.
I am using a Danish language version of LibreOffice so the text that I click on  when I right click on the mouse, with the picture selected, is actually "Rediger med eksterne værktøjer…" and not "Edit with external tool…" but that is probably not the cause of the error?
Comment 1 raal 2015-03-03 14:38:38 UTC
I can confirm with Version: 4.5.0.0.alpha0+
Build ID: f09efe39da1a2a1cf89b718bc07ed75e0da1b602
TinderBox: Win-x86@42, Branch:master, Time: 2015-02-23_22:57:28

Works OK in LO 4.2.8 portable.
Comment 2 raal 2015-03-17 19:03:55 UTC
*** Bug 90041 has been marked as a duplicate of this bug. ***
Comment 3 zaqzaqtgbyhnujm 2015-04-04 09:26:31 UTC
The error is still there in the LibreOffice 4.4.2.2 release.
Is it possible to have someone to look at the error?
It is probable a minor error since the "Edit with external tool…" worked in the initial 4.4.0.3 release.
It is of course okay to test it on the upcoming 4.5 release by why don't try to fix the bug in one of the upcoming 4.4 bugfix releases?
Especially when it worked flawlessly in the initial 4.4.0.3 release.
Comment 4 Matthew Francis 2015-04-13 11:49:57 UTC
Can't reproduce on Linux, but between 4.4.0.3 and 4.4.1.2 the below set of commits looks relevant.
Adding Cc: to mstahl@redhat.com; Any idea if there could be anything in these which could cause a Windows specific issue?

commit b55ec68268f72eee291cef29731b59c8c83af361
Author: Michael Stahl <mstahl@redhat.com>
Date:   Mon Jan 19 12:36:21 2015 +0100

    svx: ExternalToolEdit: don't terminate if SystemShellExecute throws
    
    (cherry picked from commit 5e4dc857252c8eeaaa629af2fb6b392ab02036cf)
    
    Change-Id: Ia527a2c9467e2ab097cf688164f4176a52fa1d36
    Reviewed-on: https://gerrit.libreoffice.org/13997
    Reviewed-by: Caolán McNamara <caolanm@redhat.com>
    Tested-by: Caolán McNamara <caolanm@redhat.com>

commit ef490df2119523e1761f99b5fdbb387c2c71608d
Author: Michael Stahl <mstahl@redhat.com>
Date:   Mon Jan 19 12:31:03 2015 +0100

    svx: ExternalToolEdit: check that temp file is actually created
    
    (cherry picked from commit c8ae30a720474db8efed3db31348f8ae52c149c3)
    
    Conflicts:
        svx/source/core/extedit.cxx
    
    Change-Id: I03e49493c549561b4dc806f1e191a73d06733cff
    Reviewed-on: https://gerrit.libreoffice.org/13996
    Reviewed-by: Caolán McNamara <caolanm@redhat.com>
    Tested-by: Caolán McNamara <caolanm@redhat.com>

commit 0e0595c59ba399b265146c256bf0e0631623e898
Author: Michael Stahl <mstahl@redhat.com>
Date:   Fri Jan 16 23:56:09 2015 +0100

    rhbz#1136013: svx: try to make the ExternalToolEdit not crash all the time
    
    This thing was starting a timer that re-starts itself forever, and when
    the file it was watching changed, it would just assume the drawing
    objects were still there (and the document, for that matter...)
    
    (cherry picked from commit 5f6bdce0c0ac687f418821ce328f2987bf340cda)
    
    Conflicts:
        sc/source/ui/drawfunc/graphsh.cxx
    
    Change-Id: I35f187f0828097a05618dc1733dce819fc6bffc6
    Reviewed-on: https://gerrit.libreoffice.org/13995
    Reviewed-by: Caolán McNamara <caolanm@redhat.com>
    Tested-by: Caolán McNamara <caolanm@redhat.com>
Comment 5 Michael Stahl 2015-04-14 21:55:18 UTC
yep caused by ef490df2119523e1761f99b5fdbb387c2c71608d,
there was another trap with that stupid temp-file code
(it breaks only on windows, where before that commit
the move already failed but the error was not checked)

fixed on master
Comment 6 Commit Notification 2015-04-15 07:07:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16547edcaf1d7e260bb5e1d9d48b35f58514647c&h=libreoffice-4-4

tdf#89750: svx: fix ExternalToolEdit on Windows

It will be available in 4.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2015-04-15 11:04:40 UTC
master fix was commit 582cdc273ec0e91d27be8a7893994acadf4d7d18
Comment 8 Commit Notification 2015-04-16 21:11:08 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=951b2319e0a073c88d9e1ba67dc5db42e626aaf1

tdf#89750: svx: fix ExternalToolEdit on Windows

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.