tdf#89750: svx: fix ExternalToolEdit on Windows

While adding check that the temp file move succeeds, overlooked that the
file handle is actually leaked, which means the move will fail on WNT
because the file is already open.

(regression from ef490df2119523e1761f99b5fdbb387c2c71608d)

Change-Id: I779ccde79871930fef3bad7e17b633fb62e36a46
(cherry picked from commit 582cdc273ec0e91d27be8a7893994acadf4d7d18)
Reviewed-on: https://gerrit.libreoffice.org/15315
Tested-by: David Tardon <dtardon@redhat.com>
Reviewed-by: David Tardon <dtardon@redhat.com>